Fix moveTo to not use screenAvailableRect as an origin but as a boundary https://bugs.webkit.org/show_bug.cgi?id=250800 rdar://104670843

Reviewed by Ryosuke Niwa.

Merge: https://chromium.googlesource.com/chromium/blink/+/f7557ab98c0e2bb380f9bfc6355666434c6e481f

This patch is to fix a bug where we use `screenAvailableRect` as an origin,
which can lead to window being offset based on menu bar height. It changes
`screenAvailableRect` from origin to boundary.

* Source/WebCore/page/LocalDOMWindow.cpp:
(WebCore::LocalDOMWindow::moveTo const):
* LayoutTests/fast/dom/Window/window-resize-and-move-arguments-expected.txt:
* LayoutTests/fast/dom/Window/window-resize-and-move-arguments.html:

Canonical link: https://commits.webkit.org/285205@main